syntax = "proto2";
option optimize_for = SPEED;
option cc_generic_services = false;

import "google/protobuf/any.proto";

package NickSV.Chat;


message RequestProto
{
    enum RequestType
    {
        Unknown = 0;
        ClientInfo = 1;
        Message = 2;

        Size = 3;
    }
    optional RequestType type = 1;
    optional google.protobuf.Any request_data = 2;
}